[package]
name = "astropi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
panic = "abort"
overflow-checks = false

[dependencies]
image = "0.24.2"
show-image = "0.12.3"
rayon = "1.5.3"